# bitbang-hal

./: .gitignore  Cargo.toml  LICENSE  README.md  memory.x
.cargo/: config
.github/workflows/: ci.yml
examples/: i2c-eeprom24x.rs  serial.rs  spi.rs
src/: i2c.rs  lib.rs  serial.rs  spi.rs
