[package]
name = "bitbang-hal"
version = "0.2.3"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"
description = "Implements embedded-hal traits by bitbanging"
license = "MIT"
repository = "https://github.com/sajattack/bitbang-hal"
readme = "README.md"
keywords = ["no_std", "embedded", "bitbang", "embedded-hal", "hal"]
categories = ["embedded", "no-std"]

[dependencies]
nb = "~0.1"

[dependencies.embedded-hal]
version = "~0.2"
features = ["unproven"]

[dev-dependencies.metro_m4]
version = "~0.1"
features = ["unproven"]

[dev-dependencies]
panic-halt = "~0.2"
