[package]
name = "bitbang-hal"
version = "0.3.2"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"
description = "Implements embedded-hal traits by bitbanging"
license = "MIT"
repository = "https://github.com/sajattack/bitbang-hal"
readme = "README.md"
keywords = ["no_std", "embedded", "bitbang", "embedded-hal", "hal"]
categories = ["embedded", "no-std"]

[dependencies]
nb = "0.1"

[dependencies.embedded-hal]
version = "=1.0.0-alpha.1"

[dev-dependencies.stm32f1xx-hal]
version = "0.5.3"
features = ["stm32f103", "rt", "medium"]

[dev-dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
eeprom24x = "0.3.0"
lm75 = "0.1"
