[package]
name = "bitbang-hal"
version = "0.3.3"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2021"
description = "Implements embedded-hal traits by bitbanging"
license = "MIT"
repository = "https://github.com/sajattack/bitbang-hal"
readme = "README.md"
keywords = ["no_std", "embedded", "bitbang", "embedded-hal", "hal"]
categories = ["embedded", "no-std"]

[dependencies]
nb = "1"

[dependencies.embedded-hal]
version = "0.2.7"
features = ["unproven"]

[dev-dependencies.stm32f1xx-hal]
version = "0.9"
features = ["stm32f103", "rt", "medium"]

[dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
eeprom24x = "0.5.0"
lm75 = "0.2"
